--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -4,21 +4,17 @@ on:
   workflow_dispatch:
     inputs:
       image_tag:
-        description: '镜像标签，留空则使用 package.json 中的版本号。务必注意：请确认选择了正确的分支。完整输入示例：3.0.11-rc0 '
+        description: '镜像标签，留空则使用 package.json 中的版本号。务必注意：请确认选择了正确ной ветки. Полный пример: 3.0.11-rc0 '
         required: true
         default: ''
   push:
     branches:
       - master
 
-# ref https://docs.github.com/zh/actions/learn-github-actions/variables
 env:
-  repo_name_android: "siyuan-android"
-  repo_name: "siyuan"
-  repo_owner: "siyuan-note"
   package_json: "app/package.json"
-  docker_hub_owner: "b3log"
-  docker_hub_repo: "siyuan"
+  docker_hub_owner: "mycybecatnet"  # Ваш логин Docker Hub
+  docker_hub_repo: "siyuan"         # Ваш репозиторий Docker Hub
 
 jobs:
   build:
@@ -44,12 +40,7 @@ jobs:
       - name: Free Disk Space (Ubuntu)
         uses: jlumbroso/free-disk-space@main
         with:
-          # this might remove tools that are actually needed,
-          # if set to "true" but frees about 6 GB
           tool-cache: false
-
-          # all of these default to true, but feel free to set to
-          # "false" if necessary for your workflow
           android: true
           dotnet: true
           haskell: true
@@ -70,10 +61,15 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_PWD }}
 
       - name: Build the Docker image use Workflow Dispatch inputs' version
-        if: ${{ github.event_name == 'workflow_dispatch' && !github.event.inputs.image_tag == '' }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.image_tag != '' }}
         run: |
-          docker buildx build --push --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 -t ${{ env.docker_hub_owner }}/${{ env.docker_hub_repo }}:latest -t ${{ env.docker_hub_owner }}/${{ env.docker_hub_repo }}:v${{ github.event.inputs.image_tag }} .
+          docker buildx build --push --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
+            -t ${{ env.docker_hub_owner }}/${{ env.docker_hub_repo }}:latest \
+            -t ${{ env.docker_hub_owner }}/${{ env.docker_hub_repo }}:v${{ github.event.inputs.image_tag }} .
+
       - name: Build the Docker image use package_json version
         if: ${{ github.event_name == 'push' || github.event.inputs.image_tag == '' }}
         run: |
-          docker buildx build --push --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 -t ${{ env.docker_hub_owner }}/${{ env.docker_hub_repo }}:latest -t ${{ env.docker_hub_owner }}/${{ env.docker_hub_repo }}:v${{ steps.version.outputs.value }} .
+          docker buildx build --push --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8 \
+            -t ${{ env.docker_hub_owner }}/${{ env.docker_hub_repo }}:latest \
+            -t ${{ env.docker_hub_owner }}/${{ env.docker_hub_repo }}:v${{ steps.version.outputs.value }} .
